# ros2_serial_interface

./: .gitignore  LICENSE.txt  README.md  package.xml  setup.cfg  setup.py  socat_instruction_notes.txt  testing_instructions.md
ArduinoSketches/arduino_serial_led/: arduino_serial_led.ino
ArduinoSketches/sketch_ATMega2560/: sketch_ATMega2560.ino
ArduinoSketches/sketch_L298N_ArduinoUno/: sketch_L298N_ArduinoUno.ino
launch/: serial_controller_launch.py  serial_server_launch.py
ros2_serial_interface/: device1+2_setup.sh  keyboard_publisher (copy).py  keyboard_publisher.py  keyboard_publisher2.py  predef_timed_pub.py  publisher_test.py  pynput_key_pub.py  serial_controller.py  serial_device1.py  serial_device2.py  serial_server.py  serial_test.py  terminal_key_pub.py  timer_publisher.py  virtual_serial_client.py  virtual_serial_server.py  virtual_serial_setup.py  virtual_serial_setup.sh
